# BatteryShower

./: .gitattributes  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.vue  style.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: color.rs  estimator.rs  lib.rs  log.rs  main.rs  render.rs  store.rs  tray.rs
src-tauri/src/sensors/: battery.rs  mod.rs
src/components/: PowerCurve.vue
