[package]
name = "batteryshower"
version = "0.1.0"
description = "Lightweight Windows taskbar battery power monitor"
authors = ["HAppy-2436 <10255101612@stu.ecnu.edu.cn>"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "batteryshower_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "batteryshower"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Tray icon rendering — 2D text into RGBA buffer via imageproc + ab_glyph
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"

# Windows-specific: battery IOCTL via winapi (stable 5y, less churn than `windows`)
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "fileapi",
    "handleapi",
    "ioapiset",
    "minwindef",
    "ntdef",
    "winnt",
    "impl-default",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
